--- a/theme-src/layouts/partials/header.html
+++ b/theme-src/layouts/partials/header.html
@@ -23,14 +23,38 @@
 </head>
 <body>
 
-<div class="page-wrapper">
-  <header class="container-fluid">
+<header>
+  <div class="container">
     <div class="row">
-      <h1 class="col-xs-12">
-        <a class="site-link" href="{{ .Site.BaseURL }}">
-          <span class="bpmn-icon-bpmn-io"></span> {{ .Site.Title }}
-        </a>
-      </h1>
-    </div>
-  </header>
+      <div class="col-xs-12">
+        <button class="sidebar-toggle" title="Toggle menu">
+          <span></span>
+          <span></span>
+          <span></span>
+        </button>
 
+        <h1>
+          <a class="site-link" href="{{ .Site.BaseURL }}">
+            <span class="bpmn-icon-bpmn-io"></span>
+            {{ .Site.Title }}
+          </a>
+        </h1>
+      </div>
+
+
+        <!--
+        <div class="col-xs-4 col-xs-2 networks">
+          <ul>
+            <li><a href=""><span></span><span class="name"></span></a></li>
+            <li><a href=""><span></span><span class="name"></span></a></li>
+            <li><a href=""><span></span><span class="name"></span></a></li>
+            <li><a href=""><span></span><span class="name"></span></a></li>
+          </ul>
+        </div>
+        -->
+    </div>
+  </div>
+</header>
+
+<div class="page-wrapper container">
+  <div class="row">
