--- a/theme-src/styles/_variables.less
+++ b/theme-src/styles/_variables.less
@@ -5,6 +5,6 @@
 @fonts-path: @icon-font-path;
 
 // @link-color: @brand-primary;
-// @font-size-base: 16px;
-// @font-family-base: 'open_sansregular', Helvetica, Arial, Verdana, sans-serif;
-// @line-height-base: 1.6;
+@font-size-base: 16px;
+@font-family-base: 'open_sansregular', Helvetica, Arial, Verdana, sans-serif;
+@line-height-base: 1.6;
