--- a/theme-src/layouts/partials/post-header.html
+++ b/theme-src/layouts/partials/post-header.html
@@ -3,7 +3,7 @@
 
   <div class="meta col-xs-12">
     Written by <span class="author">{{ .Params.author }}</span>
-    on <time pubdate="{{ .PublishDate }}">{{ .Date.Format "2 January 2012" }}</time>,
+    on <time pubdate="{{ .PublishDate }}">{{ .Date.Format "Wed, 2 Jan 2015" }}</time>,
     under {{ range .Params.categories }}<a href="/categories/{{ . | urlize }}">{{ . }}</a>{{ end }} category
     and tagged: <ul class="tags-list">{{ range .Params.tags }}<li><a href="/tags/{{ . | urlize }}">{{ . }}</a></li>{{ end }}</ul>.
   </div>
