--- a/theme-src/layouts/partials/sidebar.html
+++ b/theme-src/layouts/partials/sidebar.html
@@ -1,4 +1,4 @@
-<div class="page-sidebar col-xs-12 col-sm-4">
+<div class="page-sidebar col-xs-4">
   <div class="categories">
     <h5>Categories</h5>
     <ul>
@@ -18,12 +18,12 @@
     </ul>
   </div>
 
-  <div class="tags">
+  <!-- <div class="tags">
     <h5>Tags</h5>
     <ul>
     {{ range $name, $taxonomy := .Site.Taxonomies.tags }}
       <li><a href="/tags/{{ $name | urlize }}">{{ $name }}</a></li>
     {{ end }}
     </ul>
-  </div>
+  </div> -->
 </div>
