--- a/theme-src/styles/styles.less
+++ b/theme-src/styles/styles.less
@@ -12,6 +12,7 @@ body {
   padding-top: @navbar-height-at-top;
   transition: padding-top 0.218s ease;
   background-color: @gray-lighter;
+  .font-regular;
 }
 
 h1,
@@ -29,22 +30,35 @@ h5 {
   a,
   a:hover {
     text-decoration: none;
+    color: @brand-primary;
   }
 }
 
-h3,
-h5 {
+
+h3 {
   text-transform: uppercase;
+}
+
+dt,
+label,
+legend {
+  .font-regular;
+}
+
+blockquote {
+  border-left-color: mix(@brand-primary, @gray-lighter);
 }
 
 .page-wrapper {
   position: relative;
   z-index: 1;
   overflow: hidden;
-  max-width: 960px;
-  margin: 0 auto;
+  // max-width: 960px;
+  // margin: 0 auto;
   background-color: @body-bg;
+}
 
+body {
   > header {
     position: fixed;
     z-index: 2;
@@ -63,11 +77,35 @@ h5 {
       margin: 0 auto;
     }
 
+    .sidebar-toggle {
+      background-color: transparent;
+      display: none;
+      height: @navbar-height * 0.5;
+      padding: 0;
+      margin-right: 0.1em;
+      border: none;
+      outline: none;
+
+      span {
+        transition: transfrom 0.432s ease,
+                    opacity 0.432s ease;
+        display: block;
+        height: 2px;
+        margin: 4px 4px 4px 0;
+        background-color: @body-bg;
+        width: @navbar-height * 0.5;
+        &:last-of-type {
+          margin-bottom: 0;
+        }
+      }
+    }
+
     .bpmn-icon-bpmn-io:before {
       margin-left: 0;
     }
 
     h1 {
+      display: inline-block;
       margin: 0;
       font-size: (@navbar-height-at-top * 0.5);
       line-height: @navbar-height-at-top;
@@ -83,6 +121,30 @@ h5 {
         text-decoration: none;
       }
     }
+
+    .networks {
+      line-height: @navbar-height-at-top * 0.5;
+
+      ul,
+      li {
+        margin: 0;
+        padding: 0;
+      }
+
+      ul {
+        list-style: none;
+      }
+
+      li {
+        width: 50%;
+        float: left;
+        height: @navbar-height-at-top * 0.5;
+        background-color: blue;
+      }
+    }
+  }
+  &.page-sidebar-open .sidebar-toggle {
+
   }
 }
 
@@ -93,13 +155,10 @@ h5 {
 }
 
 .page-content {
-  float: left;
-  max-width: 700px;
   margin-bottom: @grid-gutter-width;
 }
 
 .page-sidebar {
-  min-width: 170px;
   > div {
     margin-top: @line-height-computed;
     border-bottom: 1px dashed @gray-light;
@@ -115,10 +174,16 @@ h5 {
 
   .tags li {
     display: inline;
+    margin: 0;
+    padding: 0;
     &:after {
       display: inline;
       content: '|';
+      margin-left: 0.2em;
       color: @gray-light;
+    }
+    &:last-of-type:after {
+      display: none;
     }
   }
 }
@@ -136,8 +201,27 @@ body > footer {
 }
 
 
-article {
+h1.page-title {
+  color: @gray;
+  padding-bottom: 10px;
+  border-bottom: 1px solid @gray-light;
+  margin-bottom: @grid-gutter-width * .5;
+  margin-top: @grid-gutter-width * 1.5;
+}
+
+
+
+article,
+section {
   margin: @grid-gutter-width auto;
+
+  padding-bottom: @grid-gutter-width;
+  border-bottom: 1px dashed @gray-light;
+
+  &:last-of-type {
+    padding-bottom: 0;
+    border-bottom: none;
+  }
 
   .meta,
   > footer {
@@ -171,13 +255,21 @@ article {
   > .content {
     margin-top: (@grid-gutter-width * 0.5);
     margin-bottom: (@grid-gutter-width * 0.5);
-
-    // &:first-letter {
-    //   font-size: 56px;
-    //   line-height: 44px;
-    //   font-weight: 100;
-    //   vertical-align: text-bottom;
-    // }
+    font-size: 17px;
+    line-height: 28px;
+    max-width: 700px;
+    /*
+    &:first-letter {
+      font-size: (@line-height-computed * 2);
+      line-height: (@line-height-computed * 2);
+      display: inline-block;
+      float: left;
+      text-indent: 2em;
+      padding-right: 8px;
+      // font-family: @font-family-serif;
+      // font-weight: 400;
+    }
+    */
   }
 
   > footer nav ul,
@@ -222,37 +314,32 @@ article {
 
 
 
-.page-wrapper article {
-  padding-bottom: @grid-gutter-width;
-  border-bottom: 1px dashed @gray-light;
 
-  &:last-of-type {
-    padding-bottom: 0;
-    border-bottom: none;
-  }
-}
+
 
 .small-header() {
   padding-top: @navbar-height;
-  .page-wrapper > header {
+  > header {
     height: @navbar-height;
-    // box-shadow: 0 4px 4px fade(@gray, 50);
+
     h1 {
       font-size: (@navbar-height * 0.5);
       line-height: @navbar-height;
       .font-regular;
     }
+
+    // .networks {
+    //   line-height: @navbar-height-at-top * 0.25;
+    //   li {
+    //     height: @navbar-height-at-top * 0.25;
+    //   }
+    // }
   }
 }
 
 .scrolled-header() {
-  .page-wrapper > header {
-    // height: @navbar-height;
+  > header {
     box-shadow: 0 4px 4px fade(@gray, 50);
-    // h1 {
-    //   font-size: (@navbar-height * 0.5);
-    //   line-height: @navbar-height;
-    // }
   }
 }
 
@@ -265,192 +352,57 @@ body.scrolled {
 @media (max-width: @screen-xs-max)  {
   body {
     .small-header();
+
+    > header {
+      .sidebar-toggle {
+        display: inline-block;
+      }
+    }
+
+    .page-sidebar {
+      z-index: 4;
+      position: fixed;
+      top: @navbar-height;
+      bottom: @footer-height;
+      left: 0;
+      background-color: @body-bg;
+      box-shadow: 0 4px 4px fade(@gray, 50);
+      overflow-x: hidden;
+      overflow-y: auto;
+      padding-left: @grid-gutter-width * 1.5;
+      background-color: @gray-lighter;
+
+      width: 320px;
+      transform: translateX(-320px);
+      transition: transform 0.218s ease;
+    }
+
+    &.page-sidebar-open {
+      .page-sidebar {
+        transform: translateX(0);
+      }
+
+      .sidebar-toggle {
+        span {
+          opacity: 0;
+
+          &:first-of-type {
+            opacity: 1;
+            transform: translateY(6px) rotateZ(45deg);
+          }
+
+          &:last-of-type {
+            opacity: 1;
+            transform: translateY(-6px) rotateZ(-45deg);
+          }
+        }
+      }
+    }
   }
 }
 
 
 
-
-
-
-@font-face {
-  font-family: 'bpmn';
-  src: url('@{fonts-path}bpmn.eot');
-  src: url('@{fonts-path}bpmn.eot#iefix') format('embedded-opentype'),
-       url('@{fonts-path}bpmn.woff') format('woff'),
-       url('@{fonts-path}bpmn.ttf') format('truetype'),
-       url('@{fonts-path}bpmn.svg#bpmn') format('svg');
-  font-weight: normal;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: 'cam-blog';
-  src: url('@{fonts-path}cam-blog.eot');
-  src: url('@{fonts-path}cam-blog.eot#iefix') format('embedded-opentype'),
-       url('@{fonts-path}cam-blog.woff') format('woff'),
-       url('@{fonts-path}cam-blog.ttf') format('truetype'),
-       url('@{fonts-path}cam-blog.svg#cam-blog') format('svg');
-  font-weight: normal;
-  font-style: normal;
-}
-
-[class^="bpmn-icon-"]:before, [class*=" bpmn-icon-"]:before,
-[class^="cam-blog-"]:before, [class*=" cam-blog-"]:before {
-  font-family: "cam-blog";
-  font-style: normal;
-  font-weight: normal;
-  speak: none;
-
-  display: inline-block;
-  text-decoration: inherit;
-  width: 1em;
-  margin-right: .2em;
-  text-align: center;
-  /* opacity: .8; */
-
-  /* For safety - reset parent styles, that can break glyph codes*/
-  font-variant: normal;
-  text-transform: none;
-
-  /* fix buttons height, for twitter bootstrap */
-  line-height: 1em;
-
-  /* Animation center compensation - margins should be symmetric */
-  /* remove if not needed */
-  margin-left: .2em;
-
-  /* you can be more comfortable with increased icons size */
-  /* font-size: 120%; */
-
-  /* Font smoothing. That was taken from TWBS */
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-
-  /* Uncomment for 3D effect */
-  /* text-shadow: 1px 1px 1px rgba(127, 127, 127, 0.3); */
-}
-
- [class^="bpmn-icon-"]:before, [class*=" bpmn-icon-"]:before {
-  font-family: "bpmn";
-}
-
-.bpmn-icon-screw-wrench:before { content: '\e800'; } /* '' */
-.bpmn-icon-trash:before { content: '\e801'; } /* '' */
-.bpmn-icon-gateway-parallel:before { content: '\e802'; } /* '' */
-.bpmn-icon-intermediate-event-catch-cancel:before { content: '\e803'; } /* '' */
-.bpmn-icon-intermediate-event-catch-non-interrupting-message:before { content: '\e804'; } /* '' */
-.bpmn-icon-start-event-compensation:before { content: '\e805'; } /* '' */
-.bpmn-icon-start-event-non-interrupting-parallel-multiple:before { content: '\e806'; } /* '' */
-.bpmn-icon-loop-marker:before { content: '\e807'; } /* '' */
-.bpmn-icon-user-task:before { content: '\e808'; } /* '' */
-.bpmn-icon-business-rule:before { content: '\e809'; } /* '' */
-.bpmn-icon-parallel-mi-marker:before { content: '\e80a'; } /* '' */
-.bpmn-icon-start-event-non-interrupting-signal:before { content: '\e80b'; } /* '' */
-.bpmn-icon-intermediate-event-catch-non-interrupting-timer:before { content: '\e80c'; } /* '' */
-.bpmn-icon-intermediate-event-catch-parallel-multiple:before { content: '\e80d'; } /* '' */
-.bpmn-icon-intermediate-event-catch-compensation:before { content: '\e80e'; } /* '' */
-.bpmn-icon-gateway-xor:before { content: '\e80f'; } /* '' */
-.bpmn-icon-connection:before { content: '\e810'; } /* '' */
-.bpmn-icon-end-event-cancel:before { content: '\e811'; } /* '' */
-.bpmn-icon-intermediate-event-catch-condition:before { content: '\e812'; } /* '' */
-.bpmn-icon-intermediate-event-catch-non-interrupting-parallel-multiple:before { content: '\e813'; } /* '' */
-.bpmn-icon-start-event-condition:before { content: '\e814'; } /* '' */
-.bpmn-icon-start-event-non-interrupting-timer:before { content: '\e815'; } /* '' */
-.bpmn-icon-sequential-mi-marker-kopie:before { content: '\e816'; } /* '' */
-.bpmn-icon-manual:before { content: '\e817'; } /* '' */
-.bpmn-icon-receive:before { content: '\e818'; } /* '' */
-.bpmn-icon-sub-process-marker:before { content: '\e819'; } /* '' */
-.bpmn-icon-start-event-parallel-multiple:before { content: '\e81a'; } /* '' */
-.bpmn-icon-start-event-error:before { content: '\e81b'; } /* '' */
-.bpmn-icon-intermediate-event-catch-signal:before { content: '\e81c'; } /* '' */
-.bpmn-icon-intermediate-event-catch-error:before { content: '\e81d'; } /* '' */
-.bpmn-icon-end-event-compensation:before { content: '\e81e'; } /* '' */
-.bpmn-icon-subprocess-collapsed:before { content: '\e81f'; } /* '' */
-.bpmn-icon-subprocess-expanded:before { content: '\e820'; } /* '' */
-.bpmn-icon-task:before { content: '\e821'; } /* '' */
-.bpmn-icon-end-event-error:before { content: '\e822'; } /* '' */
-.bpmn-icon-intermediate-event-catch-escalation:before { content: '\e823'; } /* '' */
-.bpmn-icon-intermediate-event-catch-timer:before { content: '\e824'; } /* '' */
-.bpmn-icon-start-event-escalation:before { content: '\e825'; } /* '' */
-.bpmn-icon-start-event-signal:before { content: '\e826'; } /* '' */
-.bpmn-icon-business-rule-task:before { content: '\e827'; } /* '' */
-.bpmn-icon-script:before { content: '\e828'; } /* '' */
-.bpmn-icon-send:before { content: '\e829'; } /* '' */
-.bpmn-icon-call-activity:before { content: '\e82a'; } /* '' */
-.bpmn-icon-start-event-timer:before { content: '\e82b'; } /* '' */
-.bpmn-icon-start-event-message:before { content: '\e82c'; } /* '' */
-.bpmn-icon-intermediate-event-none:before { content: '\e82d'; } /* '' */
-.bpmn-icon-intermediate-event-catch-link:before { content: '\e82e'; } /* '' */
-.bpmn-icon-end-event-escalation:before { content: '\e82f'; } /* '' */
-.bpmn-icon-text-annotation:before { content: '\e830'; } /* '' */
-.bpmn-icon-bpmn-io:before { content: '\e831'; } /* '' */
-.bpmn-icon-gateway-complex:before { content: '\e832'; } /* '' */
-.bpmn-icon-gateway-eventbased:before { content: '\e833'; } /* '' */
-.bpmn-icon-gateway-none:before { content: '\e834'; } /* '' */
-.bpmn-icon-gateway-or:before { content: '\e835'; } /* '' */
-.bpmn-icon-end-event-terminate:before { content: '\e836'; } /* '' */
-.bpmn-icon-end-event-signal:before { content: '\e837'; } /* '' */
-.bpmn-icon-end-event-none:before { content: '\e838'; } /* '' */
-.bpmn-icon-end-event-multiple:before { content: '\e839'; } /* '' */
-.bpmn-icon-end-event-message:before { content: '\e83a'; } /* '' */
-.bpmn-icon-end-event-link:before { content: '\e83b'; } /* '' */
-.bpmn-icon-intermediate-event-catch-message:before { content: '\e83c'; } /* '' */
-.bpmn-icon-intermediate-event-throw-compensation:before { content: '\e83d'; } /* '' */
-.bpmn-icon-start-event-multiple:before { content: '\e83e'; } /* '' */
-.bpmn-icon-data-input:before { content: '\e83f'; } /* '' */
-.bpmn-icon-manual-task:before { content: '\e840'; } /* '' */
-.bpmn-icon-service:before { content: '\e841'; } /* '' */
-.bpmn-icon-user:before { content: '\e842'; } /* '' */
-.bpmn-icon-receive-task:before { content: '\e843'; } /* '' */
-.bpmn-icon-data-object:before { content: '\e844'; } /* '' */
-.bpmn-icon-start-event-none:before { content: '\e845'; } /* '' */
-.bpmn-icon-intermediate-event-throw-escalation:before { content: '\e846'; } /* '' */
-.bpmn-icon-intermediate-event-catch-multiple:before { content: '\e847'; } /* '' */
-.bpmn-icon-intermediate-event-catch-non-interrupting-escalation:before { content: '\e848'; } /* '' */
-.bpmn-icon-intermediate-event-throw-link:before { content: '\e849'; } /* '' */
-.bpmn-icon-start-event-non-interrupting-condition:before { content: '\e84a'; } /* '' */
-.bpmn-icon-data-output:before { content: '\e84b'; } /* '' */
-.bpmn-icon-script-task:before { content: '\e84c'; } /* '' */
-.bpmn-icon-send-task:before { content: '\e84d'; } /* '' */
-.bpmn-icon-data-store:before { content: '\e84e'; } /* '' */
-.bpmn-icon-start-event-non-interrupting-escalation:before { content: '\e84f'; } /* '' */
-.bpmn-icon-intermediate-event-throw-message:before { content: '\e850'; } /* '' */
-.bpmn-icon-intermediate-event-catch-non-interrupting-multiple:before { content: '\e851'; } /* '' */
-.bpmn-icon-intermediate-event-catch-non-interrupting-signal:before { content: '\e852'; } /* '' */
-.bpmn-icon-intermediate-event-throw-multiple:before { content: '\e853'; } /* '' */
-.bpmn-icon-start-event-non-interrupting-message:before { content: '\e854'; } /* '' */
-.bpmn-icon-ad-hoc-marker:before { content: '\e855'; } /* '' */
-.bpmn-icon-service-task:before { content: '\e856'; } /* '' */
-.bpmn-icon-task-none:before { content: '\e857'; } /* '' */
-.bpmn-icon-compensation-marker:before { content: '\e858'; } /* '' */
-.bpmn-icon-start-event-non-interrupting-multiple:before { content: '\e859'; } /* '' */
-.bpmn-icon-intermediate-event-throw-signal:before { content: '\e85a'; } /* '' */
-.bpmn-icon-intermediate-event-catch-non-interrupting-condition:before { content: '\e85b'; } /* '' */
-
-
-
-
-
-
-
-
-
-
-.cam-blog-github:before { content: '\e800'; } /* '' */
-.cam-blog-twitter:before { content: '\e801'; } /* '' */
-.cam-blog-stackoverflow:before { content: '\e802'; } /* '' */
-.cam-blog-chat:before { content: '\e803'; } /* '' */
-.cam-blog-rss:before { content: '\e804'; } /* '' */
-.cam-blog-linkedin:before { content: '\e805'; } /* '' */
-.cam-blog-gplus:before { content: '\e806'; } /* '' */
-.cam-blog-group:before { content: '\e807'; } /* '' */
-
-
-
-
-
-
-
+@import "./icons.less";
 
 @import (less) "./node_modules/prismjs/themes/prism.css";
