--- a/theme-src/styles/icons.less
+++ b/theme-src/styles/icons.less
@@ -173,5 +173,4 @@
 .cam-blog-linkedin:before { content: '\e805'; } /* '' */
 .cam-blog-gplus:before { content: '\e806'; } /* '' */
 .cam-blog-group:before { content: '\e807'; } /* '' */
-
-
+.cam-blog-vimeo:before { content: '\e808'; } /* '' */
