--- a/theme-src/layouts/partials/sidebar.html
+++ b/theme-src/layouts/partials/sidebar.html
@@ -3,7 +3,7 @@
     <h5>Categories</h5>
     <ul>
     {{ range $name, $taxonomy := .Site.Taxonomies.categories }}
-      <li><a href="/categories/{{ $name | urlize }}">{{ $name }}</a></li>
+      <li><a href="{{ $.Site.BaseURL }}categories/{{ $name | urlize }}">{{ $name }}</a></li>
     {{ end }}
     </ul>
   </div>
@@ -22,7 +22,7 @@
     <h5>Tags</h5>
     <ul>
     {{ range $name, $taxonomy := .Site.Taxonomies.tags }}
-      <li><a href="/tags/{{ $name | urlize }}">{{ $name }}</a></li>
+      <li><a href="{{ $.Site.BaseURL }}tags/{{ $name | urlize }}">{{ $name }}</a></li>
     {{ end }}
     </ul>
   </div> -->
