--- a/theme-src/layouts/partials/post-footer.html
+++ b/theme-src/layouts/partials/post-footer.html
@@ -1,9 +1,21 @@
-<footer class="row">
-  <div class="col-xs-3 previous-post">{{ if .Prev }}<a href="{{ .Prev }}">Previous post</a>{{ end }}</div>
+<footer>
+  <div class="row">
+    <div class="tags col-xs-6">
 
-  <div class="tags col-xs-6">
+    </div>
 
+    <div class="author col-xs-6">
+
+    </div>
   </div>
 
-  <div class="col-xs-3 next-post">{{ if .Next }}<a href="{{ .Next }}">Next post</a>{{ end }}</div>
+  <div class="row">
+    <div class="col-xs-6 previous-post">
+      {{ if .PrevInSection }}<a href="{{ .PrevInSection.RelPermalink }}">{{ .PrevInSection.Title }}</a>{{ end }}
+    </div>
+
+    <div class="col-xs-6 next-post">
+      {{ if .NextInSection }}<a href="{{ .NextInSection.RelPermalink }}">{{ .NextInSection.Title }}</a>{{ end }}
+    </div>
+  </div>
 </footer>
