--- a/theme-src/layouts/partials/post-footer.html
+++ b/theme-src/layouts/partials/post-footer.html
@@ -1,21 +1,26 @@
 <footer>
-  <div class="row">
-    <div class="tags col-xs-6">
-
+  <div>
+    <div class="tags">
+      <span class="glyphicon glyphicon-tag"></span>
+      <ul class="list-inline">
+        {{ range .Params.tags }}
+          <li><a href="{{ $.Site.BaseURL }}tags/{{ . | urlize }}">{{ . }}</a> </li>
+        {{ end }}
+      </ul>
     </div>
 
-    <div class="author col-xs-6">
-
+    <div class="author" id="author-badge">
+      {{ partial "author-badge.html" . }}
     </div>
   </div>
 
-  <div class="row">
-    <div class="col-xs-6 previous-post">
-      {{ if .PrevInSection }}<a href="{{ .PrevInSection.RelPermalink }}">{{ .PrevInSection.Title }}</a>{{ end }}
+  <div>
+    <div class="next-post">
+      {{ if .NextInSection }}<a href="{{ .NextInSection.RelPermalink }}">« {{ .NextInSection.Title }}</a>{{ end }}
     </div>
 
-    <div class="col-xs-6 next-post">
-      {{ if .NextInSection }}<a href="{{ .NextInSection.RelPermalink }}">{{ .NextInSection.Title }}</a>{{ end }}
+    <div class="previous-post">
+      {{ if .PrevInSection }}<a href="{{ .PrevInSection.RelPermalink }}">{{ .PrevInSection.Title }} »</a>{{ end }}
     </div>
   </div>
 </footer>
