--- a/theme-src/layouts/post/list.html
+++ b/theme-src/layouts/post/list.html
@@ -1,6 +1,6 @@
 {{ partial "header.html" . }}
 
-  <div class="page-content col-xs-12 col-sm-8">
+  <div class="page-content list post-list">
     <header>
       <h1 class="page-title">{{ .Title }}</h1>
       {{ if .Description }}<div class="description">{{ .Description }}</div>{{ end }}
@@ -11,7 +11,7 @@
       {{ partial "post-header.html" . }}
 
       <div class="content summary">
-        {{ .Summary }}
+        <div>{{ .Summary }}</div>
       </div>
 
       <footer>
@@ -22,7 +22,5 @@
 
   {{ template "_internal/pagination.html" . }}
   </div>
-
-  {{ partial "sidebar.html" . }}
 
 {{ partial "footer.html" . }}
