--- a/theme-src/layouts/_default/single.html
+++ b/theme-src/layouts/_default/single.html
@@ -1,6 +1,6 @@
 {{ partial "header.html" . }}
 
-  <div class="page-content col-xs-12 col-sm-8">
+  <div class="page-content default">
     <section>
       <header class="row">
         <h1 class="col-xs-12"><a href="{{ .RelPermalink }}">{{ .Title }}</a></h1>
@@ -11,7 +11,5 @@
       </div>
     </section>
   </div>
-
-  {{ partial "sidebar.html" . }}
 
 {{ partial "footer.html" . }}
