--- a/theme-src/layouts/index.html
+++ b/theme-src/layouts/index.html
@@ -2,24 +2,22 @@
   {{ $paginator := .Paginate (where .Data.Pages "Type" "post") 10 }}
 
 
-  <div class="page-content col-xs-12 col-sm-8">
+  <div class="page-content mixed-list list">
   {{ range (.Paginator 10).Pages }}
-    <article>
+    {{ if eq .Section "post" }}<article>{{ else }}<section>{{ end }}
       {{ partial "post-header.html" . }}
 
       <div class="content summary">
-        {{ .Summary }}
+        <div>{{ .Summary }}</div>
       </div>
 
       <footer>
         {{ partial "readmore.html" . }}
       </footer>
-    </article>
+    {{ if eq .Section "post" }}</article>{{ else }}</section>{{ end }}
   {{ end }}
 
   {{ template "_internal/pagination.html" . }}
   </div>
-
-{{ partial "sidebar.html" . }}
 
 {{ partial "footer.html" . }}
