--- a/theme-src/layouts/misc/single.html
+++ b/theme-src/layouts/misc/single.html
@@ -1,9 +1,9 @@
 {{ partial "header.html" . }}
 
-  <div class="page-content col-xs-12 col-sm-8">
+  <div class="page-content misc">
     <section>
-      <header class="row">
-        <h1 class="col-xs-12"><a href="{{ .RelPermalink }}">{{ .Title }}</a></h1>
+      <header>
+        <h1><a href="{{ .RelPermalink }}">{{ .Title }}</a></h1>
       </header>
 
       <div class="content">
@@ -11,7 +11,5 @@
       </div>
     </section>
   </div>
-
-  {{ partial "sidebar.html" . }}
 
 {{ partial "footer.html" . }}
