--- a/theme-src/layouts/partials/footer.html
+++ b/theme-src/layouts/partials/footer.html
@@ -1,50 +1,48 @@
-  </div><!-- / .row -->
 </div><!-- / .page-wrapper -->
 
+{{ partial "sidebar.html" . }}
 
 <footer>
-  <div class="container">
-    <div class="row">
-      <div class="col-xs-3">
-        <ul class="list-inline">
-          <li><a href="{{ $.Site.BaseURL }}misc/imprint">Imprint</a></li>
-          <li><a href="{{ $.Site.BaseURL }}misc/privacy">Privacy Policy &amp; Cookies</a></li>
-        </ul>
-      </div>
+  <div>
+    <div class="boring-stuff">
+      <ul class="list-inline">
+        <li><a href="{{ $.Site.BaseURL }}misc/imprint">Imprint</a></li>
+        <li><a href="{{ $.Site.BaseURL }}misc/privacy">Privacy Policy &amp; Cookies</a></li>
+      </ul>
+    </div>
 
-      <nav class="col-xs-6 text-center">
-        <ul class="list-inline">
-          <li>
-            <a href="http://github.com/camunda">
-              <span class="cam-blog-github"></span>
-            </a>
-          </li>
-          <li>
-            <a href="http://stackoverflow.com/questions/tagged/camunda">
-              <span class="cam-blog-stackoverflow"></span>
-            </a>
-          </li>
-          <li>
-            <a href="http://twitter.com/camundabpm">
-              <span class="cam-blog-twitter"></span>
-            </a>
-          </li>
-          <li>
-            <a href="https://vimeo.com/user22820658">
-              <span class="cam-blog-vimeo"></span>
-            </a>
-          </li>
-          <li>
-            <a href="{{ .Site.BaseURL }}index.xml">
-              <span class="cam-blog-rss"></span>
-            </a>
-          </li>
-        </ul>
-      </nav>
+    <nav class="networks text-center">
+      <ul class="list-inline">
+        <li>
+          <a href="http://github.com/camunda">
+            <span class="cam-blog-github"></span>
+          </a>
+        </li>
+        <li>
+          <a href="http://stackoverflow.com/questions/tagged/camunda">
+            <span class="cam-blog-stackoverflow"></span>
+          </a>
+        </li>
+        <li>
+          <a href="http://twitter.com/camundabpm">
+            <span class="cam-blog-twitter"></span>
+          </a>
+        </li>
+        <li>
+          <a href="https://vimeo.com/user22820658">
+            <span class="cam-blog-vimeo"></span>
+          </a>
+        </li>
+        <li>
+          <a href="{{ .Site.BaseURL }}index.xml">
+            <span class="cam-blog-rss"></span>
+          </a>
+        </li>
+      </ul>
+    </nav>
 
-      <div class="col-xs-3 back-to-top text-right">
-        <a href="#">Back to top <span class="glyphicon glyphicon-chevron-up"></span></a>
-      </div>
+    <div class="back-to-top text-right">
+      <a href="#">Back to top <span class="glyphicon glyphicon-chevron-up"></span></a>
     </div>
   </div>
 </footer>
