--- a/theme-src/styles/styles.less
+++ b/theme-src/styles/styles.less
@@ -2,360 +2,452 @@
 @import "_bootstrap";
 @import "@{commons-ui-path}resources/less/_fonts";
 
-body,
-html {
+html,
+body {
+  min-height: 100%;
   position: relative;
-  height: 100%;
+}
+
+
+/* links */
+a,
+a:hover,
+a:focus {
+  outline: none;
+  text-decoration: none;
+}
+
+a {
+  position: relative;
+  display: inline-block;
+  &:after {
+    position: absolute;
+    display: block;
+    content: '';
+    background-color: @link-color;
+    bottom: -1px;
+    height: 0;
+    border-bottom: 1px solid;
+    margin-right: auto;
+
+    transition: opacity 0.218s ease,
+                transform 0.218s ease,
+                width 0.218s ease,
+                margin-left 0.218s ease;
+    opacity: 0;
+    transform: translateY(1em);
+    width: 0;
+    margin-left: 50%;
+  }
+
+  &:hover,
+  &:focus {
+    &:after {
+      margin-left: 0;
+      width: 100%;
+      opacity: 1;
+      transform: translateY(0);
+    }
+  }
+}
+
+/*
+body > .sidebar {
+  position: fixed;
+  z-index: 10;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  width: @sidebar-width + @grid-gutter-width;
+  padding: @grid-gutter-width;
+  background-color: @body-bg;
+  transform: translateX(@sidebar-width);
+
+  transition: transform 0.218s ease;
+
+  > .sidebar-toggle {
+    position: absolute;
+    top: 0;
+    left: 0;
+  }
+}
+
+.sidebar-toggle {
+  background-color: transparent;
+  padding: 3px;
+  margin: 3px;
+  border: 1px solid @gray-lighter;
+  outline: none;
+  > span {
+    width: 15px;
+    height: 2px;
+    background-color: @brand-primary;
+    margin-top: 3px;
+    margin-bottom: 3px;
+    display: block;
+    transition: opacity (0.218s * 1) ease,
+                transform (0.218s * 1) ease;
+    &:first-of-type {
+      margin-top: 2px;
+    }
+    &:last-of-type {
+      margin-bottom: 2px;
+    }
+  }
+}
+
+body.sidebar-open {
+  .sidebar-toggle {
+    > span {
+      opacity: 0;
+      &:first-of-type {
+        transform: translateY(5px) rotateZ(45deg);
+        opacity: 1;
+      }
+      &:last-of-type {
+        transform: translateY(-5px) rotateZ(-45deg);
+        opacity: 1;
+      }
+    }
+  }
+
+  > .sidebar {
+    transform: translateX(0);
+  }
+}
+*/
+.centered-content() {
+  max-width: 700px + (@grid-gutter-width * 2);
+  margin-left: auto;
+  margin-right: auto;
+  @media (max-width: 768px) {
+    padding-left: 0;
+    padding-right: 0;
+  }
 }
 
 body {
-  padding-top: @navbar-height-at-top;
-  transition: padding-top 0.218s ease;
-  .font-regular;
 }
 
-h1,
-h2,
-h3,
-h4 {
-  .font-regular;
-}
+body > header {
+  position: fixed;
+  top: 0;
+  z-index: 10;
+  width: 100%;
+  padding-left: @grid-gutter-width;
+  padding-right: @grid-gutter-width;
+  background-color: fade(@body-bg, 95);
+  border-bottom: 1px solid @gray-lighter;
 
-h1,
-h2,
-h3,
-h4,
-h5 {
-  a {
-    text-decoration: none;
-    color: @brand-primary;
+  > div {
+    .centered-content();
+    min-height: @header-height;
   }
-  a:hover,
-  a:focus {
-    text-decoration: none;
-    color: darken(@brand-primary, 20);
-    outline: none;
+
+  h1,
+  .categories {
+    margin-top: 10px;
   }
-}
+
+  h1 {
+    float: left;
+    padding-right: @grid-gutter-width * 0.5;
+    font-size: 20px;
+    font-weight: 400;
+    margin-bottom: 0;
+  }
+
+  .categories {
+    float: right;
+    padding-left: @grid-gutter-width * 0.5;
+  }
 
 
-h3 {
-  text-transform: uppercase;
-}
+  .bpmn-icon-bpmn-io:before {
+    margin-left: -2px;
+  }
 
-dt,
-label,
-legend {
-  .font-regular;
-}
+  @media (max-width: 600px) {
+    h1 {
+      padding-right: 0;
+    }
+    .site-title {
+      display: none;
+    }
+  }
 
-blockquote {
-  border-left-color: mix(@brand-primary, @gray-lighter);
+  .categories {
+    text-align: right;
+    ul,
+    li {
+      margin: 0;
+      padding: 0;
+      display: inline-block;
+    }
+    ul {
+      list-style: none;
+    }
+    li {
+      &:after {
+        display: inline-block;
+        content: '/';
+      }
+      &:last-of-type:after {
+        display: none;
+      }
+    }
+  }
 }
 
 .page-wrapper {
+  overflow: hidden;
   position: relative;
   z-index: 1;
-  overflow: hidden;
-  background-color: @body-bg;
-  min-height: ~"calc(100vh - 80px)";
-  padding-top: @grid-gutter-width;
-  padding-bottom: @grid-gutter-width;
+  top: @header-height;
+  margin-bottom: @footer-height + @grid-gutter-width;
+  width: 100%;
 }
 
-body {
-  > header {
-    position: fixed;
-    z-index: 2;
-    top: 0;
-    left: 0;
-    right: 0;
-    background-color: @navbar-inverse-bg;
-    color: @navbar-inverse-color;
-    height: @navbar-height-at-top;
 
-    box-shadow: 0 0 0 fade(@gray, 0);
-    transition: height 0.218s ease,
-                box-shadow 0.218s ease;
-    > .row {
-      max-width: 960px;
-      margin: 0 auto;
+.page-content {
+  overflow: hidden;
+  padding-left: @grid-gutter-width;
+  padding-right: @grid-gutter-width;
+  h1,
+  h2,
+  h3,
+  h4,
+  h5 {
+    margin-top: @line-height-computed * 2;
+    font-family: @font-family-sans-serif;
+  }
+
+  h1,
+  h2 {
+    font-family: 'open_sanslight', Helvetica, Arial, Verdana, sans-serif;
+  }
+
+  > header {
+    .centered-content();
+  }
+
+  figcaption h4 {
+    margin-top: 12px;
+  }
+
+  > article,
+  > section {
+    margin: @grid-gutter-width 0;
+    &:last-of-type {
+      margin-bottom: 0;
     }
 
-    .sidebar-toggle {
-      background-color: transparent;
-      display: none;
-      height: @navbar-height * 0.5;
-      padding: 0;
-      margin-right: 0.1em;
-      border: none;
-      outline: none;
+    > header,
+    > .content,
+    > footer {
+      > * {
+        .centered-content();
+      }
+      > figure {
+        padding: 2px;
+        max-width: 1280px;
+      }
+      > pre {
+        padding-top: @grid-gutter-width;
+        padding-bottom: @grid-gutter-width;
 
-      span {
-        transition: transfrom 0.432s ease,
-                    opacity 0.432s ease;
-        display: block;
-        height: 2px;
-        margin: 4px 4px 4px 0;
-        background-color: @body-bg;
-        width: @navbar-height * 0.5;
-        &:last-of-type {
-          margin-bottom: 0;
+        @media (max-width: 768px) {
+          padding-left: @grid-gutter-width * 0.5;
+          padding-right: @grid-gutter-width * 0.5;
         }
       }
     }
-
-    .bpmn-icon-bpmn-io:before {
-      margin-left: 0;
-    }
-
-    h1 {
-      display: inline-block;
-      margin: 0;
-      font-size: (@navbar-height-at-top * 0.5);
-      line-height: @navbar-height-at-top;
-      transition: font-size 0.218s ease,
-                  line-height 0.218s ease;
-      .font-light;
-    }
-
-    a {
-      color: @navbar-inverse-link-color;
-      &:hover {
-        color: @navbar-inverse-link-hover-color;
-        text-decoration: none;
-      }
-    }
-
-    .networks {
-      line-height: @navbar-height-at-top * 0.5;
-
-      ul,
-      li {
-        margin: 0;
-        padding: 0;
-      }
-
-      ul {
-        list-style: none;
-      }
-
-      li {
-        width: 50%;
-        float: left;
-        height: @navbar-height-at-top * 0.5;
-        background-color: blue;
-      }
-    }
-  }
-
-  > footer {
-    position: fixed;
-    z-index: 2;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    height: @footer-height;
-    line-height: @footer-height;
-    background-color: @gray-lighter;
-    font-size: small;
-    border-top: 1px solid #E4E4E4;
   }
 }
 
-.page-content,
-.page-sidebar {
-  padding: 0 (@grid-gutter-width * 0.5);
-  overflow: hidden;
-}
 
-.page-content {
-  margin-bottom: @grid-gutter-width;
-}
+body > footer {
+  position: fixed;
+  bottom: 0;
+  z-index: 10;
+  width: 100%;
+  padding-left: @grid-gutter-width;
+  padding-right: @grid-gutter-width;
+  background-color: fade(@body-bg, 95);
+  border-top: 1px solid @gray-lighter;
 
-.page-sidebar {
   > div {
-    margin-top: @line-height-computed;
-    border-bottom: 1px dashed @gray-light;
-    &:last-of-type {
-      border-bottom: none;
+    height: @footer-height;
+
+    > div,
+    > nav {
+      float: left;
     }
+    > div {
+      width: 30%;
+    }
+    > nav {
+      width: 40%;
+    }
+  }
+
+  .boring-stuff,
+  .back-to-top,
+  .networks {
+    line-height: @line-height-computed;
+  }
+
+  .boring-stuff,
+  .back-to-top {
+    font-size: 14px;
+  }
+
+  .networks {
+    font-size: 20px;
   }
 
   ul {
-    list-style: none;
-    padding: 0 0 0 (@grid-gutter-width * 0.5);
+    margin-bottom: 0;
   }
 }
 
 
+figure {
+  width: auto;
+  padding: 2px;
+  border: 1px solid @gray-light;
+  background-color: @gray-lighter;
+  overflow: hidden;
+  // display: inline-block;
 
-h1.page-title {
-  color: @gray;
-  padding-bottom: 10px;
-  border-bottom: 1px solid @gray-light;
-  margin-bottom: @grid-gutter-width * .5;
-  margin-top: @grid-gutter-width * 1.5;
+  > img {
+    max-width: 100%;
+    min-width: @grid-gutter-width;
+    min-height: @grid-gutter-width;
+    position: relative;
+    margin: auto;
+    text-align: center;
+
+    &[data-src]:after {
+      position: absolute;
+      display: block;
+      content: '';
+      background-color: @gray;
+      width: 100%;
+      height: 100%;
+      top: 0;
+      left: 0;
+    }
+  }
+
+  > figcaption {
+    margin-top: 2px;
+    border-top: 1px solid @gray-light;
+    font-style: italic;
+
+    h4,
+    p {
+      margin: 12px 12px 10px 12px;
+      line-height: 18px;
+    }
+
+    h4 {
+      float: left;
+      font-size: 16px;
+    }
+    p {
+      float: right;
+      font-size: 14px;
+    }
+  }
 }
-
 
 
 article,
 section {
-  margin: @grid-gutter-width auto;
-
-  padding-bottom: @grid-gutter-width;
-  border-bottom: 1px dashed @gray-light;
-
-  &:last-of-type {
-    padding-bottom: 0;
-    border-bottom: none;
-  }
-
-  .meta,
-  > footer {
-    color: @gray-light;
+  .meta {
     font-size: small;
   }
 
-  > header {
-    overflow: hidden;
-    margin-bottom: (@grid-gutter-width * 0.5);
-  }
-
   > .content {
-    margin-top: (@grid-gutter-width * 0.5);
-    margin-bottom: (@grid-gutter-width * 0.5);
-    font-size: 17px;
-    line-height: 28px;
-    max-width: 700px;
+    margin-top: @line-height-computed;// * 2;
+    font-family: @font-family-serif;
+    font-size: 18px;
+    line-height: 1.6;
   }
 
-  > footer nav ul,
-  > footer nav li {
-    margin: 0;
-    padding: 0;
+  > .comments {
+    max-width: 700px + (@grid-gutter-width * 2);
+    margin: @grid-gutter-width auto;
   }
 
-  > footer nav ul {
-    display: table;
-    list-style: none;
-    width: 100%;
-  }
+  > footer {
+    font-size: 14px;
+    margin-top: @grid-gutter-width;
+    border-bottom: 1px dashed @gray-lighter;
+    margin-bottom: @grid-gutter-width;
+    padding-bottom: @grid-gutter-width;
 
-  > footer nav li {
-    display: table-cell;
-  }
-
-  .previous-post {
-    a:before {
-      display: inline-block;
-      content: '«';
-    }
-  }
-
-  .next-post {
-    text-align: right;
-    a:after {
-      display: inline-block;
-      content: '»';
-    }
-  }
-
-  .read-more-link {
-    text-align: right;
-  }
-
-  &:first-of-type {
-    margin-top: 0;
-  }
-}
-
-
-
-
-
-
-.small-header() {
-  padding-top: @navbar-height;
-  > header {
-    height: @navbar-height;
-
-    h1 {
-      font-size: (@navbar-height * 0.5);
-      line-height: @navbar-height;
-      .font-regular;
-    }
-  }
-}
-
-.scrolled-header() {
-  > header {
-    box-shadow: 0 4px 4px fade(@gray, 50);
-  }
-}
-
-body.scrolled {
-  .small-header();
-  .scrolled-header();
-}
-
-
-@media (max-width: @screen-xs-max)  {
-  body {
-    .small-header();
-
-    > header {
-      .sidebar-toggle {
-        display: inline-block;
+    > div {
+      overflow: hidden;
+      &:first-of-type {
+        margin: (@grid-gutter-width * 0.5) auto;
+        padding: (@grid-gutter-width * 0.5) 0;
+        border: 1px dashed @gray-light;
+        border-width: 1px 0;
       }
     }
 
-    .page-sidebar {
-      z-index: 4;
-      position: fixed;
-      top: @navbar-height;
-      bottom: @footer-height;
-      left: 0;
-      background-color: @body-bg;
-      box-shadow: 0 4px 4px fade(@gray, 50);
-      overflow-x: hidden;
-      overflow-y: auto;
-      padding-left: @grid-gutter-width * 1.5;
-      background-color: @gray-lighter;
-      border-right: 1px solid #F7F7F7;
-
-      width: 320px;
-      transform: translateX(-320px);
-      transition: transform 0.218s ease;
+    .tags,
+    .author,
+    .previous-post,
+    .next-post {
+      // max-width: 50%;
+      width: 50%;
+      min-height: 1px;
+      float: left;
     }
 
-    &.page-sidebar-open {
-      .page-sidebar {
-        transform: translateX(0);
-      }
+    .tags,
+    .next-post {
+      padding-right: @grid-gutter-width * 0.5;
+    }
 
-      .sidebar-toggle {
-        span {
-          opacity: 0;
+    .author,
+    .previous-post {
+      padding-left: @grid-gutter-width * 0.5;
+      text-align: right;
+    }
 
-          &:first-of-type {
-            opacity: 1;
-            transform: translateY(6px) rotateZ(45deg);
-          }
+    .tags ul {
+      display: inline;
+    }
 
-          &:last-of-type {
-            opacity: 1;
-            transform: translateY(-6px) rotateZ(-45deg);
-          }
-        }
+    .next-post,
+    .previous-post {
+      font-size: 16px;
+    }
+  }
+}
+
+.page-content.list {
+  > article,
+  > section {
+    > footer {
+      > div:first-of-type {
+        border: none;
+        margin-top: 0;
+        margin-bottom: 0;
       }
     }
   }
 }
 
+.read-more-link {
+  text-align: right;
+}
 
 
+@import "./pager.less";
 @import "./icons.less";
-
-@import (less) "./node_modules/prismjs/themes/prism.css";
+@import "./prism.less";
